--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -2,3 +2,10 @@ spring.application.name=catalog-service
 server.port=8181
 management.endpoints.web.exposure.include=*
 spring.cloud.config.uri=http://localhost:8888
+
+
+spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=token
+spring.cloud.vault.token=s.1gEfL5UTCcBjFPKq5OR6dL5C
